gcc/testsuite/gdc.test/compilable/testDIP37_10302.d
// PERMUTE_ARGS:
// REQUIRED_ARGS: -c -Icompilable/extra-files
// EXTRA_SOURCES: extra-files/pkgDIP37_10302/liba.d extra-files/pkgDIP37_10302/libb.d
// EXTRA_FILES: extra-files/pkgDIP37_10302/package.d

module test;
import pkgDIP37_10302;
void main() {}
